--- a/worksheet-detail.html
+++ b/worksheet-detail.html
@@ -177,157 +177,212 @@
             "This worksheet helps students practice basic subtraction skills with fun visuals to better understand the fundamentals.",
           download: "#",
         },
-            {
-              id: 4,
-              title: "Visual Addition Practice 1",
-              img: "images/4.png",
-              grades: ["Pre-K", "K", "1st"],
-              subjects: ["Math"],
-              games: [],
-              summary: "Practice adding numbers with visual clues.",
-              description:
-                "This worksheet helps students practice basic addition skills with fun visuals to better understand the fundamentals.",
-              download: "#",
-            },
-            {
-              id: 5,
-              title: "Visual Addition Practice 2",
-              img: "images/5.png",
-              grades: ["Pre-K","K", "1st"],
-              subjects: ["Math"],
-              games: [],
-              summary: "Practice adding numbers with visual clues.",
-              description:
-                "This worksheet helps students practice basic addition skills with fun visuals to better understand the fundamentals.",
-              download: "#",
-            },
-            {
-              id: 6,
-              title: "Visual Addition Practice 3",
-              img: "images/6.png",
-              grades: ["Pre-K","K", "1st"],
-              subjects: ["Math"],
-              games: [],
-              summary: "Practice adding numbers with visual clues.",
-              description:
-                "This worksheet helps students practice basic addition skills with fun visuals to better understand the fundamentals.",
-              download: "#",
-            },
-            {
-              id: 7,
-              title: "Technology Matching 1",
-              img: "images/7.png",
-              grades: ["K", "1st", "2nd","3rd"],
-              subjects: ["Technoogy"],
-              games: [],
-              summary: "Match common technology items to their names.",
-              description:
-                "This worksheet helps students recognize and label everyday technology devices like tablets, printers, and keyboards, improving both vocabulary and tech awareness.",
-              download: "#",
-            },
-            {
-              id: 8,
-              title: "Technology Matching 2",
-              img: "images/8.png",
-              grades: ["K", "1st", "2nd","3rd"],
-              subjects: ["Technoogy"],
-              games: [],
-              summary: "Match common technology items to their names.",
-              description:
-                "This worksheet helps students recognize and label everyday technology devices like tablets, printers, and keyboards, improving both vocabulary and tech awareness.",
-              download: "#",
-            },
-            {
-              id: 9,
-              title: "Keyboard Recognition",
-              img: "images/9.png",
-              grades: ["K", "1st", "2nd"],
-              subjects: ["Technology"],
-              games: [],
-              summary: "Identify and find letters on a keyboard.",
-              description:
-                    "This worksheet introduces students to a keyboard, asking them to find and circle the letters that spell their name, helping build familiarity with typing tools.",
-              download: "#",
-            },
-            {
-              id: 10,
-              title: "Coding by Color 1",
-              img: "images/10.png",
-              grades: ["Pre-K","K", "1st"],
-              subjects: ["Math"],
-              games: [],
-              summary: "Practice adding numbers with visual clues.",
-              description:
-                "This worksheet helps students practice basic addition skills with fun visuals to better understand the fundamentals.",
-              download: "#",
-            },
-            {
-              id: 2,
-              title: "Coding by Color 2",
-              img: "images/11.png",
-              grades: ["Pre-K","K", "1st"],
-              subjects: ["Technology", "Logic Riddles"],
-              games: [],
-              summary: "Copy color patterns to simulate basic coding logic.",
-              description:
-                "This worksheet will help strengthen pattern recognition and sequencing skills by copying colored blocks, a great early introduction to coding concepts.",
-              download: "#",
-            },
-            {
-              id: 12,
-              title: "Emoji Code Breaker",
-              img: "images/12.png",
-              grades: [ "1st", "2nd","3rd"],
-              subjects: ["Logic Riddles", "Word Puzzles", "Word Search", "Reading", "Arts"],
-              games: [],
-              summary: "Crack emoji codes using a fun key chart to reveal secret words.",
-              description:
-                "This worksheet uses fun emojis and pictures to help practice early decoding, pattern recognition, and letter matching as they use a visual key. This is great for building problem-solving and literacy skills in an engaging activity.",
-              download: "#",
-            },
-            {
-              id: 13,
-              title: "Emoji Code Breaker 2",
-              img: "images/13.png",
-              grades: [ "1st", "2nd","3rd"],
-              subjects: ["Logic Riddles", "Word Puzzles", "Word Search", "Reading", "Arts"],
-              games: [],
-              summary: "Crack emoji codes using a fun key chart to reveal secret words.",
-              description:
-                "This worksheet uses fun emojis and pictures to help practice early decoding, pattern recognition, and letter matching as they use a visual key. This is great for building problem-solving and literacy skills in an engaging activity.",
-              download: "#",
-            },
-            {
-              id: 14,
-              title: "Animal Code Breaker",
-              img: "images/14.png",
-              grades: [ "1st", "2nd","3rd"],
-              subjects: ["Logic Riddles", "Word Puzzles", "Word Search", "Reading", "Arts"],
-              games: [],
-              summary: "Crack emoji codes using a fun key chart to reveal secret words.",
-              description:
-                "This worksheet uses fun emojis and pictures to help practice early decoding, pattern recognition, and letter matching as they use a visual key. This is great for building problem-solving and literacy skills in an engaging activity.",
-              download: "#",
-            },
-            {
-              id: 15,
-              title: "Animal Code Breaker 2",
-              img: "images/15.png",
-              grades: [ "1st", "2nd","3rd"],
-              subjects: ["Logic Riddles", "Word Puzzles", "Word Search", "Reading", "Arts"],
-              games: [],
-              summary: "Crack emoji codes using a fun key chart to reveal secret words.",
-              description:
-                "This worksheet uses fun emojis and pictures to help practice early decoding, pattern recognition, and letter matching as they use a visual key. This is great for building problem-solving and literacy skills in an engaging activity.",
-              download: "#",
-            },
-
+        {
+          id: 4,
+          title: "Visual Addition Practice 1",
+          img: "images/4.png",
+          grades: ["Pre-K", "K", "1st"],
+          subjects: ["Math"],
+          games: [],
+          summary: "Practice adding numbers with visual clues.",
+          description:
+            "This worksheet helps students practice basic addition skills with fun visuals to better understand the fundamentals.",
+          download: "#",
+        },
+        {
+          id: 5,
+          title: "Visual Addition Practice 2",
+          img: "images/5.png",
+          grades: ["Pre-K", "K", "1st"],
+          subjects: ["Math"],
+          games: [],
+          summary: "Practice adding numbers with visual clues.",
+          description:
+            "This worksheet helps students practice basic addition skills with fun visuals to better understand the fundamentals.",
+          download: "#",
+        },
+        {
+          id: 6,
+          title: "Visual Addition Practice 3",
+          img: "images/6.png",
+          grades: ["Pre-K", "K", "1st"],
+          subjects: ["Math"],
+          games: [],
+          summary: "Practice adding numbers with visual clues.",
+          description:
+            "This worksheet helps students practice basic addition skills with fun visuals to better understand the fundamentals.",
+          download: "#",
+        },
+        {
+          id: 7,
+          title: "Technology Matching 1",
+          img: "images/7.png",
+          grades: ["K", "1st", "2nd", "3rd"],
+          subjects: ["Technoogy"],
+          games: [],
+          summary: "Match common technology items to their names.",
+          description:
+            "This worksheet helps students recognize and label everyday technology devices like tablets, printers, and keyboards, improving both vocabulary and tech awareness.",
+          download: "#",
+        },
+        {
+          id: 8,
+          title: "Technology Matching 2",
+          img: "images/8.png",
+          grades: ["K", "1st", "2nd", "3rd"],
+          subjects: ["Technoogy"],
+          games: [],
+          summary: "Match common technology items to their names.",
+          description:
+            "This worksheet helps students recognize and label everyday technology devices like tablets, printers, and keyboards, improving both vocabulary and tech awareness.",
+          download: "#",
+        },
+        {
+          id: 9,
+          title: "Keyboard Recognition",
+          img: "images/9.png",
+          grades: ["K", "1st", "2nd"],
+          subjects: ["Technology"],
+          games: [],
+          summary: "Identify and find letters on a keyboard.",
+          description:
+            "This worksheet introduces students to a keyboard, asking them to find and circle the letters that spell their name, helping build familiarity with typing tools.",
+          download: "#",
+        },
+        {
+          id: 10,
+          title: "Coding by Color 1",
+          img: "images/10.png",
+          grades: ["Pre-K", "K", "1st"],
+          subjects: ["Math"],
+          games: [],
+          summary: "Practice adding numbers with visual clues.",
+          description:
+            "This worksheet helps students practice basic addition skills with fun visuals to better understand the fundamentals.",
+          download: "#",
+        },
+        {
+          id: 2,
+          title: "Coding by Color 2",
+          img: "images/11.png",
+          grades: ["Pre-K", "K", "1st"],
+          subjects: ["Technology"],
+          games: ["Logic Riddles"],
+          summary: "Copy color patterns to simulate basic coding logic.",
+          description:
+            "This worksheet will help strengthen pattern recognition and sequencing skills by copying colored blocks, a great early introduction to coding concepts.",
+          download: "#",
+        },
+        {
+          id: 12,
+          title: "Emoji Code Breaker",
+          img: "images/12.png",
+          grades: ["1st", "2nd", "3rd"],
+          subjects: ["Reading", "Arts"],
+          games: ["Logic Riddles", "Word Puzzles", "Word Search"],
+          summary:
+            "Crack emoji codes using a fun key chart to reveal secret words.",
+          description:
+            "This worksheet uses fun emojis and pictures to help practice early decoding, pattern recognition, and letter matching as they use a visual key. This is great for building problem-solving and literacy skills in an engaging activity.",
+          download: "#",
+        },
+        {
+          id: 13,
+          title: "Emoji Code Breaker 2",
+          img: "images/13.png",
+          grades: ["1st", "2nd", "3rd"],
+          subjects: ["Reading", "Arts"],
+          games: ["Logic Riddles", "Word Puzzles", "Word Search"],
+          summary:
+            "Crack emoji codes using a fun key chart to reveal secret words.",
+          description:
+            "This worksheet uses fun emojis and pictures to help practice early decoding, pattern recognition, and letter matching as they use a visual key. This is great for building problem-solving and literacy skills in an engaging activity.",
+          download: "#",
+        },
+        {
+          id: 14,
+          title: "Animal Code Breaker",
+          img: "images/14.png",
+          grades: ["1st", "2nd", "3rd"],
+          subjects: ["Reading", "Arts"],
+          games: ["Logic Riddles", "Word Puzzles", "Word Search"],
+          summary:
+            "Crack emoji codes using a fun key chart to reveal secret words.",
+          description:
+            "This worksheet uses fun emojis and pictures to help practice early decoding, pattern recognition, and letter matching as they use a visual key. This is great for building problem-solving and literacy skills in an engaging activity.",
+          download: "#",
+        },
+        {
+          id: 15,
+          title: "Animal Code Breaker 2",
+          img: "images/15.png",
+          grades: ["1st", "2nd", "3rd"],
+          subjects: ["Reading", "Arts"],
+          games: ["Logic Riddles", "Word Puzzles", "Word Search"],
+          summary:
+            "Crack emoji codes using a fun key chart to reveal secret words.",
+          description:
+            "This worksheet uses fun emojis and pictures to help practice early decoding, pattern recognition, and letter matching as they use a visual key. This is great for building problem-solving and literacy skills in an engaging activity.",
+          download: "#",
+        },
+        {
+          id: 16,
+          title: "Count to 100 Challenge 1",
+          img: "images/16.png",
+          grades: ["K", "1st", "2nd"],
+          subjects: ["Math"],
+          games: ["Memory Games"],
+          summary:
+            "Fill in the missing numbers to complete the chart from 1 to 100.",
+          description:
+            "This fun number chart helps kids practice counting and number counting up to 100. People will identify and fill in the missing numbers to reinforce fundamentals.",
+          download: "#",
+        },
+        {
+          id: 17,
+          title: "Count to 100 Challenge 2",
+          img: "images/17.png",
+          grades: ["K", "1st", "2nd"],
+          subjects: ["Math"],
+          games: ["Memory Games"],
+          summary:
+            "Fill in the missing numbers to complete the chart from 1 to 100.",
+          description:
+            "This fun number chart helps kids practice counting and number counting up to 100. People will identify and fill in the missing numbers to reinforce fundamentals.",
+          download: "#",
+        },
+        {
+          id: 18,
+          title: "Count to 100 Challenge Christmas",
+          img: "images/18.png",
+          grades: ["K", "1st", "2nd"],
+          subjects: ["Math"],
+          games: ["Memory Games"],
+          summary:
+            "Fill in the missing numbers to complete the chart from 1 to 100.",
+          description:
+            "This fun number chart helps kids practice counting and number counting up to 100. People will identify and fill in the missing numbers to reinforce fundamentals.",
+          download: "#",
+        },
+        {
+          id: 19,
+          title: "Bee Multiplication",
+          img: "images/19.png",
+          grades: ["2nd", "3rd", "4th"],
+          subjects: ["Math", "Arts"],
+          games: ["Logic Riddles"],
+          summary:
+            "Match the multiplication equation to its product and color each pair",
+          description:
+            "This worksheet aims to help students strengthen their multiplication skills by matching equations with their correct answers. With a beelike theme, this activity adds fun to math!",
+          download: "#",
+        },
       ];
 
       createApp({
         setup() {
           const worksheet = ref(null);
-          const allWsRef = ref([...baseWorksheets]); 
+          const allWsRef = ref([...baseWorksheets]);
           const similarWorks = ref([]);
 
           const computeSimilar = () => {
